--- a/src/components/WorkSection/WorkSection.module.css
+++ b/src/components/WorkSection/WorkSection.module.css
@@ -1,7 +1,48 @@
+.container {
+  margin-top: 10rem;
+}
+
 .sectionHeadingContainer {
   border-bottom: 1px solid var(--lightGray2);
   padding-bottom: 1rem;
   margin-bottom: 3rem;
+}
+
+.heading {
+  margin-bottom: 4rem;
+  text-align: center;
+  width: fit-content;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0rem 4rem;
+  font-family: var(--BoogyBrutPoster);
+  color: var(--blue);
+  font-size: 6rem;
+  font-weight: 600;
+  position: relative;
+}
+
+.heading::after {
+  content: "";
+  position: absolute;
+  width: 15vw;
+  height: 1px;
+  background-color: var(--blue);
+  top: 50%;
+  right: 100%;
+  transform: translateY(-50%);
+}
+
+.heading::before {
+  content: "";
+  position: absolute;
+  width: 15vw;
+  height: 1px;
+  background-color: var(--blue);
+  top: 50%;
+  left: 100%;
+  transform: translateY(-50%);
 }
 
 .content {
@@ -72,6 +113,14 @@
 }
 
 @media screen and (max-width: 768px) {
+  .heading::after {
+    width: 10vw;
+  }
+
+  .heading::before {
+    width: 10vw;
+  }
+
   .top,
   .bottom {
     grid-template-columns: repeat(1, 1fr);
@@ -94,5 +143,17 @@
 
   .resumeContainer {
     margin-bottom: 5rem;
+  }
+}
+
+@media screen and (max-width: 568px) {
+
+
+  .heading::after {
+    width: 0%;
+  }
+
+  .heading::before {
+    width: 0%;
   }
 }
