--- a/src/components/WorkSection/WorkSection.module.css
+++ b/src/components/WorkSection/WorkSection.module.css
@@ -8,43 +8,6 @@
   margin-bottom: 3rem;
 }
 
-.heading {
-  margin-bottom: 4rem;
-  text-align: center;
-  width: fit-content;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0rem 4rem;
-  font-family: var(--BoogyBrutPoster);
-  color: var(--blue);
-  font-size: 6rem;
-  font-weight: 600;
-  position: relative;
-}
-
-.heading::after {
-  content: "";
-  position: absolute;
-  width: 15vw;
-  height: 1px;
-  background-color: var(--blue);
-  top: 50%;
-  right: 100%;
-  transform: translateY(-50%);
-}
-
-.heading::before {
-  content: "";
-  position: absolute;
-  width: 15vw;
-  height: 1px;
-  background-color: var(--blue);
-  top: 50%;
-  left: 100%;
-  transform: translateY(-50%);
-}
-
 .content {
   border: 1px solid var(--lightGray2);
   border-radius: 15px;
@@ -98,9 +61,7 @@
 }
 
 .name {
-  /* font-size: 1.6rem; */
   color: var(--blue);
-  /* text-transform: uppercase; */
   padding: 2rem;
   font-weight: 600;
   border-bottom: 1px dashed var(--lightGray2);
@@ -113,14 +74,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .heading::after {
-    width: 10vw;
-  }
-
-  .heading::before {
-    width: 10vw;
-  }
-
   .top,
   .bottom {
     grid-template-columns: repeat(1, 1fr);
@@ -128,6 +81,7 @@
 
   .sectionTitle {
     text-align: center;
+    border-right: none;
   }
 
   .left {
@@ -147,8 +101,6 @@
 }
 
 @media screen and (max-width: 568px) {
-
-
   .heading::after {
     width: 0%;
   }
