--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -19,9 +19,22 @@
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px rgba(153, 126, 152, 1),
   0px 15px 25px 0px rgba(0, 0, 0, 0.15);
-  /* padding: 8px 8px 8px 20px; */
   border: 1px solid #faf7f4;
   border-top: 1px solid var(--lightGray);
+}
+ 
+.header.hide {
+  transform: translate(-50%, -150%);
+  opacity: 0;
+}
+
+.header.show {
+  transform: translate(-50%, -50%); 
+  opacity: 1;
+}
+
+.white {
+  color: white !important;
 }
 
 .navbar {
@@ -64,19 +77,6 @@
   position: relative;
 }
 
-/* .navItems::after,
-.navItemsii::after {
-  position: absolute;
-  content: "";
-  top: 10px;
-  left: 10px;
-  width: 100%;
-  height: 100%;
-  background-color: var(--blue);
-  border: 1px solid var(--tan);
-  z-index: -1;
-} */
-
 .navItems {
   width: fit-content;
   margin-left: auto;
@@ -92,16 +92,11 @@
   margin-left: auto;
 }
 
-.navItemsii {
-  justify-content: flex-end;
-}
-
 .navItem {
   position: relative;
   line-height: 1;
-  font-weight: 400;
+  font-weight: 600;
   font-size: 1.4rem;
-  /* text-transform: uppercase; */
   color: var(--black);
   user-select: none;
   scroll-behavior: smooth;
@@ -134,7 +129,6 @@
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
-    /* padding: 1.5rem; */
   }
 
   .navbar {
@@ -229,6 +223,10 @@
   .hamburger.active .whiteBar:nth-child(3) {
     -webkit-transform: translateY(0px) rotate(-45deg);
     transform: translateY(2px) rotate(-45deg);
+  }
+
+  .white {
+    color: white !important;
   }
 }
 
