--- a/src/components/BlogCard/BlogCard.module.css
+++ b/src/components/BlogCard/BlogCard.module.css
@@ -7,6 +7,7 @@
   overflow: hidden;
   cursor: pointer;
   transition: all 0.2s ease-in;
+  width: 100%;
 }
 
 .cardContainer {
@@ -14,24 +15,14 @@
   color: var(--white);
   border: 1px solid var(--blue);
   position: relative;
-  box-shadow: 0px 10px 10px 0px rgba(153, 126, 152, 1),
+  box-shadow:
+    0px 10px 10px 0px rgba(153, 126, 152, 1),
     0px 15px 25px 0px rgba(0, 0, 0, 0.15);
 }
 
-.cardContainer::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  content: "";
-  opacity: 0.05;
-  pointer-events: none;
-  background: url(../../../public/noise.gif);
-}
-
 .cardContainer:hover {
-  box-shadow: 0px 0px 0px 0px rgba(153, 126, 152, 1),
+  box-shadow:
+    0px 0px 0px 0px rgba(153, 126, 152, 1),
     0px 0px 0px 0px rgba(0, 0, 0, 0.15);
 }
 
@@ -39,6 +30,18 @@
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+.imgContainer::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  opacity: 0.06;
+  pointer-events: none;
+  background: url(../../../public/noise.gif);
 }
 
 .img {
@@ -67,6 +70,8 @@
   border-bottom: 1px dashed var(--white);
   width: 100%;
   padding: 2rem;
+  font-weight: 600;
+  line-height: 120%;
   padding-left: 5rem;
 }
 
