--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -17,19 +17,20 @@
   backdrop-filter: saturate(180%) blur(20px);
   width: 90%;
   border-radius: 10px;
-  box-shadow: 0px 4px 4px 0px rgba(153, 126, 152, 1),
-  0px 15px 25px 0px rgba(0, 0, 0, 0.15);
+  box-shadow:
+    0px 4px 4px 0px rgba(153, 126, 152, 1),
+    0px 15px 25px 0px rgba(0, 0, 0, 0.15);
   border: 1px solid #faf7f4;
   border-top: 1px solid var(--lightGray);
 }
- 
+
 .header.hide {
   transform: translate(-50%, -150%);
   opacity: 0;
 }
 
 .header.show {
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
   opacity: 1;
 }
 
