--- a/src/components/AboutHero/AboutHero.module.css
+++ b/src/components/AboutHero/AboutHero.module.css
@@ -59,7 +59,6 @@
   margin-left: 0.3rem;
 }
 
-
 .btnContainer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -70,11 +69,12 @@
 
 .box {
   position: relative;
+  margin-top: 20rem;
 }
 
 .sceneContainer {
   position: absolute;
-  top: 0%;
+  top: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100vw;
@@ -88,13 +88,20 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .box {
+    margin-top: 25rem;
+  }
+}
+
 @media screen and (max-width: 568px) {
   .btnContainer {
     width: 100%;
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .box {
-    margin-top: 30rem;
+  .sceneContainer {
+    width: 85vw;
+    height: 85vh;
   }
 }
