--- a/src/components/AboutHero/AboutHero.module.css
+++ b/src/components/AboutHero/AboutHero.module.css
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   width: 100%;
-  min-height: 75vh;
+  min-height: 70vh;
   overflow: hidden;
   background: linear-gradient(
     135deg,
@@ -23,33 +23,22 @@
 }
 
 .content {
-  padding-top: 10rem;
-  padding-bottom: 18rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  position: relative;
-  z-index: 998;
-}
-
-.heading {
-  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 3rem;
+  margin-top: 10rem;
 }
 
 .heading2 {
   font-family: var(--BoogyBrutPoster);
   font-size: 6rem;
-  mix-blend-mode: overlay;
+  /* mix-blend-mode: overlay; */
 }
 
 .copy,
 .span {
   max-width: 640px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 1rem;
   line-height: 1.4em;
   font-size: 2rem;
 }
@@ -59,49 +48,33 @@
   margin-left: 0.3rem;
 }
 
-.btnContainer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2rem;
-  width: 50%;
-  margin-top: 1rem;
-}
-
-.box {
-  position: relative;
-  margin-top: 20rem;
-}
-
-.sceneContainer {
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
+.sceneContianer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 968px) {
-  .btnContainer {
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .box {
-    margin-top: 25rem;
-  }
-}
-
-@media screen and (max-width: 568px) {
-  .btnContainer {
-    width: 100%;
+  .content {
     grid-template-columns: repeat(1, 1fr);
+    grid-gap: 10rem;
   }
 
-  .sceneContainer {
-    width: 85vw;
-    height: 85vh;
+  .left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .heading,
+  .copy {
+    text-align: center;
+  }
+
+  .sceneContianer {
+    margin-top: 8rem;
   }
 }
