--- a/src/components/Scene2/Scene2.module.css
+++ b/src/components/Scene2/Scene2.module.css
@@ -1,9 +1,9 @@
 .container {
   position: absolute;
   z-index: 10;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   width: 100%;
   height: 100%;
 }
