--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -5,9 +5,17 @@
 .top {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  border-top: 1px solid var(--white);
+  /* border-top: 1px solid var(--white); */
   padding-top: 1.5rem;
   margin-top: 10rem;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 2rem;
 }
 
 .span {
@@ -47,6 +55,7 @@
   grid-template-columns: repeat(1, 1fr);
   width: 30%;
   margin-right: auto;
+  margin-left: auto;
   margin-top: 5rem;
 }
 
@@ -134,7 +143,8 @@
 }
 
 @media screen and (max-width: 1068px) {
-  .top {
+  .top,
+  .box {
     display: flex;
     flex-direction: column;
     align-items: center;
