--- a/src/components/Faqs/Faqs.module.css
+++ b/src/components/Faqs/Faqs.module.css
@@ -62,7 +62,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--purple);
+   background: linear-gradient(
+    135deg,
+    rgba(252, 210, 205, 1) 15%,
+    rgba(189, 183, 213, 1) 65%
+  );
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 998;
   border-radius: 15px;
 }
 
@@ -72,8 +80,8 @@
 
 .imgContianer {
   position: relative;
-  width: 70%;
-  height: 70%;
+  width: 100%;
+  height: 100%;
   animation: float 5s ease-in-out infinite;
 }
 
