--- a/src/components/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/ProjectsSection/ProjectsSection.module.css
@@ -9,16 +9,15 @@
 }
 
 .sectionHeadingContainer {
-  border-bottom: 1px solid var(--lightGray);
-  padding-bottom: 1rem;
+  /* border-bottom: 1px solid var(--lightGray); */
+  /* padding-bottom: 1rem; */
   margin-bottom: 2rem;
 }
 
 .heading span {
   font-family: var(--BoogyBrutPoster);
-  font-size: 5rem; 
+  font-size: 5rem;
   margin-right: 1rem;
-
 }
 
 .copy {
@@ -76,7 +75,7 @@
 .btnContainerii {
   margin-top: 5rem;
   margin-left: auto;
-  margin-right: auto;
+  /* margin-right: auto; */
   display: grid;
   width: 30%;
 }
@@ -86,8 +85,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 2rem;
-    margin-bottom: 2rem;
   }
 
   .container {
@@ -110,11 +107,20 @@
   .bottomLeft {
     height: 350px;
   }
+
+  .btnContainerii {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .container {
     padding: 0rem 4rem;
+  }
+
+  .btnContainerii {
+    width: 100%;
   }
 }
 
