--- a/src/components/AboutFeatures/AboutFeatures.module.css
+++ b/src/components/AboutFeatures/AboutFeatures.module.css
@@ -11,11 +11,6 @@
   width: 100%;
 }
 
-.falseBtnContainer {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .heading {
   margin-top: -1rem;
@@ -60,6 +55,17 @@
   background-color: transparent;
 }
 
+
+  .content:nth-child(1) .iconContainer,
+  .content:nth-child(2) .iconContainer,
+  .content:nth-child(3) .iconContainer,
+  .content:nth-child(5) .iconContainer,
+  .content:nth-child(6) .iconContainer,
+  .content:nth-child(9) .iconContainer {
+    display: none;
+  }
+
+
 .title,
 .titleMobile {
   text-align: center;
@@ -77,12 +83,18 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  background-color: var(--purple);
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  padding: 1rem;
 }
 
 .icon {
-  color: var(--purple);
+  color: var(--blue);
   margin-top: 1rem;
   margin-bottom: 1rem;
+  font-size: 3rem;
 }
 
 .desc {
