--- a/src/components/AboutFeatures/AboutFeatures.module.css
+++ b/src/components/AboutFeatures/AboutFeatures.module.css
@@ -11,7 +11,6 @@
   width: 100%;
 }
 
-
 .heading {
   margin-top: -1rem;
 }
@@ -24,8 +23,8 @@
 
 .copy {
   width: 40%;
+  color: var(--grayText);
   margin-bottom: 3rem;
-  opacity: 0.7;
 }
 
 .dataContainer {
@@ -55,16 +54,14 @@
   background-color: transparent;
 }
 
-
-  .content:nth-child(1) .iconContainer,
-  .content:nth-child(2) .iconContainer,
-  .content:nth-child(3) .iconContainer,
-  .content:nth-child(5) .iconContainer,
-  .content:nth-child(6) .iconContainer,
-  .content:nth-child(9) .iconContainer {
-    display: none;
-  }
-
+.content:nth-child(1) .iconContainer,
+.content:nth-child(2) .iconContainer,
+.content:nth-child(3) .iconContainer,
+.content:nth-child(5) .iconContainer,
+.content:nth-child(6) .iconContainer,
+.content:nth-child(9) .iconContainer {
+  display: none;
+}
 
 .title,
 .titleMobile {
@@ -76,6 +73,10 @@
 
 .titleMobile {
   display: none;
+}
+
+.title {
+  font-size: 1.6rem;
 }
 
 .iconContainer {
