--- a/src/components/BlogCard2/BlogCard2.module.css
+++ b/src/components/BlogCard2/BlogCard2.module.css
@@ -42,11 +42,8 @@
 }
 
 .title {
-  font-size: 2rem;
-
+  font-size: 1.6rem;
   width: 100%;
-  /* padding: 2rem;
-  padding-left: 2rem; */
 }
 
 .desc {
@@ -72,7 +69,8 @@
     justify-content: center;
   }
 
-  .imgContainer, .img {
+  .imgContainer,
+  .img {
     width: 100%;
     margin: 0;
     border-radius: 0px;
