--- a/src/components/Faqs/Faqs.module.css
+++ b/src/components/Faqs/Faqs.module.css
@@ -191,8 +191,7 @@
 .question {
   color: var(--blue);
   line-height: 130%;
-  font-size: 1.8rem;
-}
+font-size: 1.6rem;}
 
 .answerbox {
   display: grid;
@@ -200,6 +199,7 @@
   gap: 2rem;
   background-color: transparent;
   transition: background-color 0.2s ease-in-out;
+  padding:0rem 2rem;
 }
 
 .answer {
