--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -1,7 +1,3 @@
-.container {
-  /* margin-top: 20rem; */
-}
-
 .top {
   margin-bottom: 3rem;
 }
@@ -66,6 +62,7 @@
 }
 
 .title {
+  font-size: 1.6rem;
   padding-top: 16rem;
   text-align: center;
 }
