--- a/src/components/Tools/Tools.module.css
+++ b/src/components/Tools/Tools.module.css
@@ -68,7 +68,8 @@
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 1.6rem;
+  width: 90%;
   letter-spacing: -0.0125em;
   font-size: 2rem;
   font-weight: 500;
