--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -1,6 +1,3 @@
-/* .container {
-  padding-top: 20rem;
-} */
 
 .heading1 {
   text-align: center;
@@ -22,7 +19,7 @@
 }
 
 .box {
-  border: 1px solid var(--white);
+  border: 1px solid var(--lightGray);
   margin-top: 3rem;
   border-radius: 25px;
 }
@@ -30,7 +27,7 @@
 .middle {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  border-bottom: 1px solid var(--white);
+  border-bottom: 1px solid var(--lightGray);
 }
 
 .heading {
