--- a/src/components/ProjectHero/ProjectHero.module.css
+++ b/src/components/ProjectHero/ProjectHero.module.css
@@ -79,8 +79,7 @@
   position: absolute;
   top: 0%;
   left: 50%;
-  transform: translate(-50%, -35%);
-  transform: translate(-50%, -35%) rotate(0deg);
+  transform: translate(-50%, -32%);
   width: 100vw;
   height: 100vh;
   z-index: -1;
@@ -104,6 +103,12 @@
 
   .btnContainer {
     width: 80%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding-bottom: 5rem;
   }
 }
 
